--- a/block-BNaaft/events/views/remarkEdit.ejs
+++ b/block-BNaaft/events/views/remarkEdit.ejs
@@ -69,7 +69,7 @@
               <a href="https://www.facebook.com/" class="icon"
                 ><i class="fab fa-twitter-square"></i
               ></a>
-              <a href="https://github.com/ravindra-me" class="icon"
+              <a href="https://github.com/priyabadatiya" class="icon"
                 ><i class="fab fa-github"></i
               ></a>
             </div>
